# aosoa

./: .gitignore  CMakeLists.txt  README.md
aosoa/: aligned_alloc.hpp  aosoa.hpp  aosoa_list.hpp  aosoa_utils.hpp  aosoa_vector.hpp  container.hpp  iter.hpp  joined_range.hpp  predeclarition.hpp  soa.hpp  soa_array.hpp  soa_vector.hpp  uiter.hpp  xsimd_cast.hpp  xsimd_tpa_op.hpp
tests/: readme.cpp  test.cpp  test_alg.cpp  test_iter.cpp  test_iter2.cpp  test_merge.cpp  test_serialize.cpp  test_simd.cpp  test_simd_cast.cpp
